Overflow hidden added to resolve left margin of the website media query Updated

--- a/responsive.css
+++ b/responsive.css
@@ -7,10 +7,17 @@
 }
 
 
-html,
-body {
-    overflow: hidden;
+html, body {
+    overflow-x: hidden;
+    overflow-y: auto;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 
 /* Nav Bar Responsive style*/
